Phase 0: Tormach 9D Architecture Port
COMPLETED
=========

Architecture:
  * Dual-layer: userspace planning, RT execution
  * Lock-free SPSC queue with atomic operations
  * 9D vector abstractions (lines work, arcs TODO)
  * Backward velocity pass optimizer
  * Peak smoothing algorithm
  * Atomic state sharing between layers

Critical Fixes:
  * Optimizer now updates `tc->finalvel` (prevents velocity discontinuities)
  * Force exact stop mode (`TC_TERM_COND_STOP`) - no blending yet
  * RT loop calls `tpRunCycle()` every cycle (fixes 92% done bug)
  * Error handling uses proper `rtapi_print_msg()` instead of `printf()`

Verified Working:
  * Simple linear G-code completes (squares, rectangles)
  * Acceleration stays within INI limits during normal motion
  * No blend spikes (fixed)

KNOWN LIMITATIONS
=================

E-stop: 3x acceleration spike
  - Tormach has identical behavior (checked their code)
  - Industry standard for emergency stops
  - Safety requirement: immediate response
  - Acceptable for Phase 0

No Blending: Exact stop at every corner
  - Expected - Phase 4 feature
  - Prevents acceleration spikes without blend geometry

No Arcs: G2/G3 not implemented
  - Not needed for Phase 0 validation
  - `tpAddCircle_9D()` stub exists

Feed Override: Abrupt changes
  - Predictive handoff needed (Phase 3)
  - Works, just not smooth

FUTURE PHASES
=============

Phase 1: Kinematics in userspace
Phase 2: Ruckig S-curve integration
Phase 3: Predictive handoff, time-based buffering
Phase 4: Bezier blend geometry
Phase 5: Hardening, edge cases
Phase 6: Cleanup

FILES MODIFIED
==============

Core Planning:
  src/emc/motion_planning/motion_planning_9d.cc - Optimizer
  src/emc/motion_planning/motion_planning_9d_userspace.cc - Segment queueing
  src/emc/motion_planning/motion_planning_9d.hh - Interface

RT Layer:
  src/emc/motion/control.c - RT control loop fix
  src/emc/motion/command.c - Mode transitions
  src/emc/tp/tp.c - Apply optimized velocities
  src/emc/tp/tcq

--- a/src/Makefile
+++ b/src/Makefile
@@ -182,7 +182,7 @@ SUBDIRS := \
     emc/usr_intf/gremlin emc/usr_intf/gscreen emc/usr_intf/pyui emc/usr_intf/qtvcp \
     emc/usr_intf/gmoccapy emc/usr_intf/qtplasmac emc/usr_intf/mdro\
     emc/usr_intf emc/nml_intf emc/task emc/kinematics emc/tp emc/canterp \
-    emc/motion emc/ini emc/rs274ngc emc/sai emc/pythonplugin \
+    emc/motion emc/motion_planning emc/ini emc/rs274ngc emc/sai emc/pythonplugin \
     emc/motion-logger \
     emc/tooldata \
     emc \
@@ -1298,18 +1298,7 @@ tpmod-objs += emc/tp/blendmath.o
 tpmod-objs += emc/nml_intf/emcpose.o
 tpmod-objs += libnml/posemath/_posemath.o
 tpmod-objs += emc/tp/sp_scurve.o
-tpmod-objs += emc/tp/ruckig_wrapper.o
-tpmod-objs += emc/tp/ruckig/src/ruckig/brake.o
-tpmod-objs += emc/tp/ruckig/src/ruckig/position_first_step1.o
-tpmod-objs += emc/tp/ruckig/src/ruckig/position_first_step2.o
-tpmod-objs += emc/tp/ruckig/src/ruckig/position_second_step1.o
-tpmod-objs += emc/tp/ruckig/src/ruckig/position_second_step2.o
-tpmod-objs += emc/tp/ruckig/src/ruckig/position_third_step1.o
-tpmod-objs += emc/tp/ruckig/src/ruckig/position_third_step2.o
-tpmod-objs += emc/tp/ruckig/src/ruckig/velocity_second_step1.o
-tpmod-objs += emc/tp/ruckig/src/ruckig/velocity_second_step2.o
-tpmod-objs += emc/tp/ruckig/src/ruckig/velocity_third_step1.o
-tpmod-objs += emc/tp/ruckig/src/ruckig/velocity_third_step2.o
+tpmod-objs += emc/tp/tc_9d.o
 tpmod-objs += libnml/posemath/sincos.o $(MATHSTUB)
 
 TORTOBJS = $(foreach file,$($(patsubst %.o,%,$(1))-objs), objects/rt$(file))
