--- a/configs/sim/axis/axis.ini
+++ b/configs/sim/axis/axis.ini
@@ -51,6 +51,9 @@ INTRO_TIME = 5
 #EDITOR = geany
 TOOL_EDITOR = tooledit
 
+#Prevent tool mark disappearing with small tool diameter in g-code preview widget
+GCODE_VIEW_TOOL_MIN_DIA = 0
+
 INCREMENTS = 1 in, 0.1 in, 10 mil, 1 mil, 1mm, .1mm, 1/8000 in
 
 [FILTER]
