--- a/configs/sim/axis/axis_mm.ini
+++ b/configs/sim/axis/axis_mm.ini
@@ -45,6 +45,9 @@ INTRO_TIME = 5
 
 #EDITOR = geany
 
+#Prevent tool mark disappearing with small tool diameter in g-code preview widget
+GCODE_VIEW_TOOL_MIN_DIA = 0.08
+
 INCREMENTS = 1 mm, .01 in, .1mm, 1 mil, .1 mil, 1/8000 in
 [FILTER]
 PROGRAM_EXTENSION = .png,.gif,.jpg Grayscale Depth Image
