--- a/configs/sim/gmoccapy/gmoccapy.ini
+++ b/configs/sim/gmoccapy/gmoccapy.ini
@@ -45,6 +45,9 @@ PROGRAM_PREFIX = ../../nc_files/
 INTRO_GRAPHIC = linuxcnc.gif
 INTRO_TIME = 5
 
+#Prevent tool mark disappearing with small tool diameter in g-code preview widget
+GCODE_VIEW_TOOL_MIN_DIA = 2.0
+
 # list of selectable jog increments
 INCREMENTS = 1.000 mm, 0.100 mm, 0.010 mm, 0.001 mm, 1.2345 inch
 
