--- a/configs/sim/qtdragon_hd/qtdragon_hd_xyz/qtdragon_hd_vertical_xyza.ini
+++ b/configs/sim/qtdragon_hd/qtdragon_hd_xyz/qtdragon_hd_vertical_xyza.ini
@@ -44,6 +44,9 @@ DEFAULT_ANGULAR_VELOCITY = 10
 MIN_ANGULAR_VELOCITY = 1
 MAX_ANGULAR_VELOCITY = 360
 
+#Prevent tool mark disappearing with small tool diameter in g-code preview widget
+GCODE_VIEW_TOOL_MIN_DIA = 2.0
+
 # incremental jog step length options
 INCREMENTS = 10 mm, 1.0 mm, 0.10 mm, 0.01 mm, 1.0 inch, 0.1 inch, 0.01 inch
 
