warn users about s-curve homing within the test ini files

--- a/configs/sim/axis/axis_mm_scurve.ini
+++ b/configs/sim/axis/axis_mm_scurve.ini
@@ -146,6 +146,28 @@ MAX_JERK = 1000.0
 #MIN_LIMIT = -200.0 #disabled to give more space for testing g-codes
 #MAX_LIMIT = 200.0 #disabled to give more space for testing g-codes
 
+# ========================================================
+# HOMING CONFIGURATION FOR S-CURVE
+# ========================================================
+# WARNING: When using S-curve motion (PLANNER_TYPE=1), you MUST set
+# HOME_SEARCH_VEL and HOME_LATCH_VEL significantly SLOWER than you
+# would with trapezoidal motion planning.
+#
+# S-curve motion requires MORE DISTANCE to decelerate due to the
+# jerk-limited acceleration profile. If homing velocities are too
+# high, the axis may overshoot and hit hard limits or sensor limits.
+#
+# RECOMMENDED: Start with 50% or less of the velocities you would
+# use with trapezoidal planning, then increase cautiously.
+#
+# Example homing configuration (adjust for your machine):
+#HOME_SEARCH_VEL = 5.0       # Velocity for initial limit switch search
+#HOME_LATCH_VEL = 1.0        # Velocity for precise homing (slower)
+#HOME_OFFSET = 0.0           # Distance from switch to home position
+#HOME_USE_INDEX = NO         # Use encoder index pulse for homing
+#HOME_IGNORE_LIMITS = NO     # Ignore limit switches during homing move
+# ========================================================
+
 [JOINT_1]
 TYPE = LINEAR
 HOME = 0.0
@@ -156,6 +178,11 @@ MAX_JERK = 1000.0
 #MAX_LIMIT = 200.0 #disabled to give more space for testing g-codes
 HOME_SEQUENCE = 0
 
+# WARNING: S-curve homing requires SLOWER velocities than trapezoidal!
+# See JOINT_0 for detailed homing configuration examples.
+#HOME_SEARCH_VEL = 5.0
+#HOME_LATCH_VEL = 1.0
+
 [JOINT_2]
 TYPE = LINEAR
 HOME = 0.0
@@ -165,6 +192,11 @@ MAX_JERK = 800.0
 #MIN_LIMIT = -100.0 #disabled to give more space for testing g-codes
 #MAX_LIMIT = 100.0 #disabled to give more space for testing g-codes
 HOME_SEQUENCE = 0
+
+# WARNING: S-curve homing requires SLOWER velocities than trapezoidal!
+# See JOINT_0 for detailed homing configuration examples.
+#HOME_SEARCH_VEL = 4.0
+#HOME_LATCH_VEL = 0.8
 
 # ========================================================
 # AXIS CONFIGURATION
