gmoccapy: change SPINDLE => SPINDLE_0 in *.ini files

--- a/configs/sim/gmoccapy/9_axis.ini
+++ b/configs/sim/gmoccapy/9_axis.ini
@@ -15,10 +15,11 @@ GEOMETRY = XYZABCUVW
 
 # Values that will be allowed for override, 1.0 = 100%
 MAX_FEED_OVERRIDE    =  1.5
-MAX_SPINDLE_OVERRIDE =  1.2
-MIN_SPINDLE_OVERRIDE =  0.5
+MAX_SPINDLE_0_OVERRIDE =  1.2
+MIN_SPINDLE_0_OVERRIDE =  0.5
 
-DEFAULT_SPINDLE_SPEED = 500
+# Start value for spindle speed
+DEFAULT_SPINDLE_0_SPEED = 500
 
 # list of selectable jog increments
 INCREMENTS = 1.000 mm, 0.100 mm, 0.010 mm, 0.001 mm ,1.2345 in
