--- a/configs/sim/gmoccapy/gmoccapy_4_axis.ini
+++ b/configs/sim/gmoccapy/gmoccapy_4_axis.ini
@@ -13,8 +13,11 @@ CYCLE_TIME =            100
 
 # Highest value that will be allowed for feed override, 1.0 = 100%
 MAX_FEED_OVERRIDE =     1.5
-MAX_SPINDLE_OVERRIDE =  1.2
-MIN_SPINDLE_OVERRIDE = .5
+MAX_SPINDLE_0_OVERRIDE =  1.2
+MIN_SPINDLE_0_OVERRIDE = .5
+
+# Start value for spindle speed
+DEFAULT_SPINDLE_0_SPEED = 450
 
 # Prefix to be used
 PROGRAM_PREFIX = ../../nc_files/
