--- a/configs/sim/gmoccapy/gmoccapy.ini
+++ b/configs/sim/gmoccapy/gmoccapy.ini
@@ -25,7 +25,7 @@ MAX_FEED_OVERRIDE    = 1.5
 MIN_SPINDLE_0_OVERRIDE = 0.5
 MAX_SPINDLE_0_OVERRIDE = 1.2
 
-# Spindel start speed
+# Spindle start speed
 DEFAULT_SPINDLE_0_SPEED = 450
 # Scaling of spindle speed bar
 MIN_SPINDLE_0_SPEED     = 0
