--- a/configs/sim/gmoccapy/gmoccapy_XYZCW.ini
+++ b/configs/sim/gmoccapy/gmoccapy_XYZCW.ini
@@ -9,7 +9,7 @@
 [EMC]
 
 VERSION = 1.1
-MACHINE =               gmoccapy XYZAB
+MACHINE =               gmoccapy XYZCW
 DEBUG = 0
 #DEBUG =               0x7FFFFFFF
 
@@ -22,8 +22,11 @@ CYCLE_TIME =            100
 
 # Highest value that will be allowed for feed override, 1.0 = 100%
 MAX_FEED_OVERRIDE =     1.5
-MAX_SPINDLE_OVERRIDE =  1.2
-MIN_SPINDLE_OVERRIDE = .5
+MAX_SPINDLE_0_OVERRIDE =  1.2
+MIN_SPINDLE_0_OVERRIDE = .5
+
+# Start value for spindle speed
+DEFAULT_SPINDLE_0_SPEED = 450
 
 # Max and default jog speeds in units per second
 MAX_LINEAR_VELOCITY =   166
