--- a/configs/sim/gmoccapy/gmoccapy_messages.ini
+++ b/configs/sim/gmoccapy/gmoccapy_messages.ini
@@ -18,8 +18,11 @@ CYCLE_TIME =            100
 
 # Highest value that will be allowed for feed override, 1.0 = 100%
 MAX_FEED_OVERRIDE =     1.5
-MAX_SPINDLE_OVERRIDE =  1.2
-MIN_SPINDLE_OVERRIDE = .5
+MAX_SPINDLE_0_OVERRIDE =  1.2
+MIN_SPINDLE_0_OVERRIDE = .5
+
+# Start value for spindle speed
+DEFAULT_SPINDLE_0_SPEED = 450
 
 # Max and default jog speeds in units per second
 MAX_LINEAR_VELOCITY =   166
