--- a/configs/sim/gmoccapy/gmoccapy_pyngcgui_gcmc.ini
+++ b/configs/sim/gmoccapy/gmoccapy_pyngcgui_gcmc.ini
@@ -62,14 +62,16 @@ CYCLE_TIME =            100
 
 # Values that will be allowed for override, 1.0 = 100%
 MAX_FEED_OVERRIDE    =  1.5
-MAX_SPINDLE_OVERRIDE =  1.2
-MIN_SPINDLE_OVERRIDE = 0.5
+MAX_SPINDLE_0_OVERRIDE =  1.2
+MIN_SPINDLE_0_OVERRIDE = 0.5
+
+# Start value for spindle speed
+DEFAULT_SPINDLE_0_SPEED = 450
 
 # Max and default jog speeds in units per second
 MAX_LINEAR_VELOCITY =   166
 DEFAULT_LINEAR_VELOCITY = 100
 MAX_ANGULAR_VELOCITY = 234
-DEFAULT_SPINDLE_SPEED = 450
 
 # Introductory graphic
 INTRO_GRAPHIC = linuxcnc.gif
