--- a/tests/motion-logger/basic/expected.builtin-startup.in
+++ b/tests/motion-logger/basic/expected.builtin-startup.in
@@ -3,7 +3,7 @@ SET_NUM_SPINDLES 1
 SET_VEL vel=0, ini_maxvel=1.2
 SET_VEL_LIMIT vel=4
 SET_ACC acc=1e+99
-SET_JERK jerk=10000
+SET_JERK jerk=1e+09
 SET_PLANNER_TYPE planner_type=0
 SETUP_ARC_BLENDS
 SET_MAX_FEED_OVERRIDE 1
