--- a/configs/sim/axis/axis_mm_scurve.ini
+++ b/configs/sim/axis/axis_mm_scurve.ini
@@ -7,10 +7,14 @@
 # acceleration profiles that can reduce machine vibration and
 # improve surface finish.
 #
-# IMPORTANT: S-curve planning is OPTIONAL and DISABLED by default.
+# IMPORTANT: S-curve planning is OPTIONAL.
 # Traditional trapezoidal acceleration is used when:
 #   - PLANNER_TYPE = 0, OR
-#   - MAX_LINEAR_JERK = 0 (or not specified)
+#   - MAX_LINEAR_JERK = 0
+#
+# NOTE: If MAX_LINEAR_JERK is not specified, it defaults to 1e9 (1 billion),
+# which effectively disables jerk limiting while still using S-curve calculations.
+# This produces motion similar to trapezoidal but not identical.
 #
 # ========================================================
 [EMC]
@@ -64,6 +68,8 @@ PLANNER_TYPE = 1
 # Units: machine-units/second^3 (e.g., mm/s^3 or inch/s^3)
 #
 # Setting this to 0 disables S-curve planning regardless of PLANNER_TYPE
+# If not specified, defaults to 1e9 (effectively no jerk limiting)
+# Maximum allowed value is 1e9 (values above are automatically clamped)
 #
 # Recommended starting values (adjust based on your machine):
 #   - Light/rigid machines: 1000-10000
