--- a/debian/control.main-pkg.in
+++ b/debian/control.main-pkg.in
@@ -22,6 +22,7 @@ Depends:
     python3-opengl,
     python3-configobj,
     python3-xlib,
+    python3-zmq,
     libgtksourceview-4-dev,
     tcl@TCLTK_VERSION@,
     tk@TCLTK_VERSION@,
