Phase 3: Feed Override and Motion Planning Optimization
Phase 2 (Ruckig Integration) was merged from master.

This phase adds:
- Feed override handling with proper velocity/acceleration management
- 9-phase profile optimization for trajectory smoothing
- Downstream exit velocity capping for segment boundaries
- Tangent-aware Jacobian limits for per-axis joint constraints
- Backward pass optimization for profile consistency
- Jerk-aware motion planning refinements

--- a/src/Makefile
+++ b/src/Makefile
@@ -232,7 +232,9 @@ USERSRCS += $(PYSRCS)
 CUSERSRCS := $(filter %.c,$(USERSRCS))
 CXXUSERSRCS := $(filter %.cc %.cpp,$(USERSRCS))
 CUSEROBJS := $(call TOOBJS,$(CUSERSRCS))
-CXXUSEROBJS += $(call TOOBJS,$(CXXUSERSRCS))
+CXXUSEROBJS_CC := $(patsubst %.cc,objects/%.o,$(filter %.cc,$(CXXUSERSRCS)))
+CXXUSEROBJS_CPP := $(patsubst %.cpp,objects/%.o,$(filter %.cpp,$(CXXUSERSRCS)))
+CXXUSEROBJS += $(CXXUSEROBJS_CC) $(CXXUSEROBJS_CPP)
 
 ifeq ($(TRIVIAL_BUILD),no)
 # Find the dependency filenames, then include them all
@@ -279,27 +281,7 @@ $(sort $(CUSEROBJS)) : objects/%.o: %.c
 		-MP -MD -MF "${@:.o=.d}" -MT "$@" \
 		$< -o $@
 
-# Ruckig files need C++20
-RUCKIG_CXX_FILES := $(filter emc/tp/ruckig%,$(CXXUSERSRCS))
-NON_RUCKIG_CXX_FILES := $(filter-out emc/tp/ruckig%,$(CXXUSERSRCS))
-
-$(sort $(patsubst %.cpp,objects/%.o,$(filter %.cpp,$(RUCKIG_CXX_FILES)))) : objects/%.o: %.cpp
-	$(ECHO) Compiling $<
-	@mkdir -p $(dir $@)
-	@rm -f $@
-	$(Q)$(CXX) -c $(CXXFLAGS) $(EXTRAFLAGS) -std=c++20 \
-		-MP -MD -MF "${@:.o=.d}" -MT "$@" \
-		$< -o $@
-
-$(sort $(patsubst %.cc,objects/%.o,$(filter %.cc,$(RUCKIG_CXX_FILES)))) : objects/%.o: %.cc
-	$(ECHO) Compiling $<
-	@mkdir -p $(dir $@)
-	@rm -f $@
-	$(Q)$(CXX) -c $(CXXFLAGS) $(EXTRAFLAGS) -std=c++20 \
-		-MP -MD -MF "${@:.o=.d}" -MT "$@" \
-		$< -o $@
-
-$(sort $(patsubst %.cpp,objects/%.o,$(filter %.cpp,$(NON_RUCKIG_CXX_FILES)))) : objects/%.o: %.cpp
+$(sort $(CXXUSEROBJS_CC)) : objects/%.o: %.cc
 	$(ECHO) Compiling $<
 	@mkdir -p $(dir $@)
 	@rm -f $@
@@ -307,7 +289,7 @@ $(sort $(patsubst %.cpp,objects/%.o,$(filter %.cpp,$(NON_RUCKIG_CXX_FILES)))) : 
 		-MP -MD -MF "${@:.o=.d}" -MT "$@" \
 		$< -o $@
 
-$(sort $(patsubst %.cc,objects/%.o,$(filter %.cc,$(NON_RUCKIG_CXX_FILES)))) : objects/%.o: %.cc
+$(sort $(CXXUSEROBJS_CPP)) : objects/%.o: %.cpp
 	$(ECHO) Compiling $<
 	@mkdir -p $(dir $@)
 	@rm -f $@
@@ -320,19 +302,11 @@ $(sort $(patsubst %.c,%.i,$(CUSERSRCS))): %.i: %.c
 	$(ECHO) Preprocessing $< to $@
 	$(Q)$(CC) -dD $(CFLAGS) $(EXTRAFLAGS) -E $< -o $@
 
-$(sort $(patsubst %.cc,%.ii,$(filter %.cc,$(RUCKIG_CXX_FILES)))): %.ii: %.cc
-	$(ECHO) Preprocessing $< to $@
-	$(Q)$(CXX) -dD $(CXXFLAGS) $(EXTRAFLAGS) -std=c++20 -E $< -o $@
-
-$(sort $(patsubst %.cpp,%.ii,$(filter %.cpp,$(RUCKIG_CXX_FILES)))): %.ii: %.cpp
-	$(ECHO) Preprocessing $< to $@
-	$(Q)$(CXX) -dD $(CXXFLAGS) $(EXTRAFLAGS) -std=c++20 -E $< -o $@
-
-$(sort $(patsubst %.cc,%.ii,$(filter %.cc,$(NON_RUCKIG_CXX_FILES)))): %.ii: %.cc
+$(sort $(patsubst %.cc,%.ii,$(filter %.cc,$(CXXUSERSRCS)))): %.ii: %.cc
 	$(ECHO) Preprocessing $< to $@
 	$(Q)$(CXX) -dD $(CXXFLAGS) $(EXTRAFLAGS) -E $< -o $@
 
-$(sort $(patsubst %.cpp,%.ii,$(filter %.cpp,$(NON_RUCKIG_CXX_FILES)))): %.ii: %.cpp
+$(sort $(patsubst %.cpp,%.ii,$(filter %.cpp,$(CXXUSERSRCS)))): %.ii: %.cpp
 	$(ECHO) Preprocessing $< to $@
 	$(Q)$(CXX) -dD $(CXXFLAGS) $(EXTRAFLAGS) -E $< -o $@
 
@@ -1298,6 +1272,18 @@ tpmod-objs += emc/tp/blendmath.o
 tpmod-objs += emc/nml_intf/emcpose.o
 tpmod-objs += libnml/posemath/_posemath.o
 tpmod-objs += emc/tp/sp_scurve.o
+tpmod-objs += emc/tp/ruckig_wrapper.o
+tpmod-objs += emc/tp/ruckig/src/ruckig/brake.o
+tpmod-objs += emc/tp/ruckig/src/ruckig/position_first_step1.o
+tpmod-objs += emc/tp/ruckig/src/ruckig/position_first_step2.o
+tpmod-objs += emc/tp/ruckig/src/ruckig/position_second_step1.o
+tpmod-objs += emc/tp/ruckig/src/ruckig/position_second_step2.o
+tpmod-objs += emc/tp/ruckig/src/ruckig/position_third_step1.o
+tpmod-objs += emc/tp/ruckig/src/ruckig/position_third_step2.o
+tpmod-objs += emc/tp/ruckig/src/ruckig/velocity_second_step1.o
+tpmod-objs += emc/tp/ruckig/src/ruckig/velocity_second_step2.o
+tpmod-objs += emc/tp/ruckig/src/ruckig/velocity_third_step1.o
+tpmod-objs += emc/tp/ruckig/src/ruckig/velocity_third_step2.o
 tpmod-objs += emc/tp/tc_9d.o
 tpmod-objs += libnml/posemath/sincos.o $(MATHSTUB)
 
