qtncam -group.cfg - fix missing value entry

--- a/lib/python/qtvcp/lib/native_cam/cfg/group.cfg
+++ b/lib/python/qtvcp/lib/native_cam/cfg/group.cfg
@@ -23,6 +23,7 @@ tool_tip = _("Disabling will disable ALL items")
 name = _("Note")
 type = text
 icon = comment.png
+value =
 
 [VALIDATION]
 content =
