--- a/src/Makefile
+++ b/src/Makefile
@@ -182,7 +182,7 @@ SUBDIRS := \
     emc/usr_intf/gremlin emc/usr_intf/gscreen emc/usr_intf/pyui emc/usr_intf/qtvcp \
     emc/usr_intf/gmoccapy emc/usr_intf/qtplasmac emc/usr_intf/mdro\
     emc/usr_intf emc/nml_intf emc/task emc/kinematics emc/tp emc/canterp \
-    emc/motion emc/motion_planning emc/ini emc/rs274ngc emc/sai emc/pythonplugin \
+    emc/motion emc/motion_planning emc/kinematics_userspace emc/ini emc/rs274ngc emc/sai emc/pythonplugin \
     emc/motion-logger \
     emc/tooldata \
     emc \
