--- a/tests/linuxcncrsh/linuxcncrsh-test.ini
+++ b/tests/linuxcncrsh/linuxcncrsh-test.ini
@@ -1,11 +1,11 @@
 [EMC]
 MACHINE = linuxcncrsh-test
 VERSION = 1.1
-DEBUG = 0x7FFFFFFF
-RCS_DEBUG = 0xEF67FFFF
+DEBUG = 0
+#RCS_DEBUG = 0xF763FF01
 
 [DISPLAY]
-DISPLAY = linuxcncrsh
+DISPLAY = linuxcncrsh -n RuntimeTestMachine
 
 [TASK]
 TASK = milltask
@@ -21,10 +21,14 @@ COMM_TIMEOUT = 4.0
 BASE_PERIOD = 0
 SERVO_PERIOD = 1000000
 
+[EMCIO]
+TOOL_TABLE = tool.tbl
+
 [HAL]
-HALFILE = LIB:core_sim.hal
+HALFILE = lcncrsh_sim.hal
 
 [TRAJ]
+SPINDLES =              2
 AXES =                  3
 COORDINATES =           X Y Z
 HOME =                  0 0 0
@@ -58,7 +62,6 @@ MAX_ACCELERATION = 100.0
 [KINS]
 KINEMATICS = trivkins
 JOINTS = 3
-SPINDLES = 2
 
 [JOINT_0]
 TYPE =             LINEAR
@@ -72,6 +75,7 @@ MIN_LIMIT =        -40.0
 MAX_LIMIT =        40.0
 FERROR =           0.050
 MIN_FERROR =       0.010
+HOME_SEQUENCE =    0
 
 [JOINT_1]
 TYPE =             LINEAR
@@ -85,6 +89,7 @@ MIN_LIMIT =        -40.0
 MAX_LIMIT =        40.0
 FERROR =           0.050
 MIN_FERROR =       0.010
+HOME_SEQUENCE =    1
 
 [JOINT_2]
 TYPE =             LINEAR
@@ -98,4 +103,5 @@ MIN_LIMIT =        -4.0
 MAX_LIMIT =        4.0
 FERROR =           0.050
 MIN_FERROR =       0.010
+HOME_SEQUENCE =    2
 
